--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "seng-scss": "^1.0.0",
     "vue": "^2.2.5",
     "vue-i18n-manager": "^3.2.2",
+    "vue-property-decorator": "^8.0.0",
     "vue-router": "^3.0.1",
     "vue-types": "^1.0.1",
-    "vuex": "^3.0.1",
+    "vuex": "^3.1.0",
+    "vuex-class": "^0.3.2",
+    "vuex-module-decorators": "^0.9.8",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
